# backITup

./: .gitignore  INTE403_VALILA_LHUISEGAHBRIELLE_BACKITUP_DOCUMENTATION.docx  LICENSE  README.md  backITup.py  generate_docs.py  pyproject.toml  requirements.txt
core/: auth.py  backup_engine.py  benchmark.py  config_manager.py  encryption.py  event_handler.py  logger.py  scheduler.py  watcher.py
dashboard/: __init__.py  app.py  routes.py  socket_events.py
dashboard/templates/: base.html  index.html  jobs.html  login.html  users.html
utils/: email_alerts.py  file_utils.py  notify.py
