[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "backitup"
version = "0.1.0"
description = "A Python backup utility"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
backitup = "backitup.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
